working on dest select

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -13,11 +13,11 @@
 }
 .alert-info {
   color: #FF2A6B;
-  font-family: 'Lato', 'sans-serif' !important;
+  //font-family: 'Lato', 'sans-serif' !important;
   font-size: 19px;
 }
 .alert-warning {
   color: #cc0000;
-  font-family: 'Lato', 'sans-serif' !important;
+  //font-family: 'Lato', 'sans-serif' !important;
   font-size: 19px;
 }
