--- a/app/assets/stylesheets/components/_flexbox_elements.scss
+++ b/app/assets/stylesheets/components/_flexbox_elements.scss
@@ -31,7 +31,7 @@
   max-width: 50vh;
   min-height: 20vh;
   text-align: center;
-  font-family: 'Lato', 'sans-serif';
+  //font-family: 'Lato', 'sans-serif';
   font-weight: 300;
   h3 {
     color: #f1f1f1;
@@ -50,7 +50,7 @@
   width: 40vh;
   min-height: 20vh;
   text-align: center;
-  font-family: 'Lato', 'sans-serif';
+  //font-family: 'Lato', 'sans-serif';
   font-weight: 300;
   h3 {
     color: #f1f1f1;
@@ -75,7 +75,7 @@
   width: 70vh;
   min-height: 30vh;
   text-align: center;
-  font-family: 'Lato', 'sans-serif';
+  //font-family: 'Lato', 'sans-serif';
   font-weight: 300;
   h3 {
     color: #f1f1f1;
@@ -98,7 +98,7 @@
 }
 
 .user_profile {
-  font-family: 'Maven Pro', 'sans-serif' !important;
+  //font-family: 'Maven Pro', 'sans-serif' !important;
   //color: rgba(255,42,107, 0.8);
 }
 
@@ -135,7 +135,7 @@
   margin-left: 2vw;
   margin-right: 2vw;
   font-weight: normal;
-  font-family: 'Maven Pro', 'sans-serif' !important;
+  //font-family: 'Maven Pro', 'sans-serif' !important;
   font-size: x-large;
 
   p {
