--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,7 +8,7 @@
 }
 
 .footer-item {
-  font-family: 'Maven Pro', 'sans-serif' !important;
+  //font-family: 'Maven Pro', 'sans-serif' !important;
   align-self: auto;
   align-items: flex-start;
   margin: 4vh auto;
