--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -14,7 +14,7 @@
   color: rgba(255,255,255,1);
   font-size: 15px;
   font-weight: 300;
-  font-family: 'Lato', 'sans-serif';
+  //font-family: 'Lato', 'sans-serif';
 }
 
 .banner {
