--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -3,7 +3,7 @@
   border-radius: 25px;
   background-color: transparent;
   color: rgba(255,255,255,1);
-  font-family: 'Lato', sans-serif;
+  //font-family: 'Lato', sans-serif;
   font-size: 17px;
   font-weight: 350;
   min-height: 38px;
@@ -25,7 +25,7 @@
   border-radius: 15px;
   background-color: rgba(255,42,107, 0.8);
   color: white;
-  font-family: 'Maven Pro', sans-serif;
+  //font-family: 'Maven Pro', sans-serif;
   font-size: 25px;
   font-weight: 380;
   min-height: 30px;
@@ -39,7 +39,7 @@
 //  width: 70px;
   &:hover{
     cursor: pointer;
-    font-family: 'Maven Pro', sans-serif;
+    //font-family: 'Maven Pro', sans-serif;
     text-decoration: underline;
     color: white;
   }
