--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: 'Lato', 'sans-serif';
+  //font-family: 'Lato', 'sans-serif';
   font-size: 20px;
   background-color: #362217;
 }
@@ -22,7 +22,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: 'Lato', 'sans-serif';
+  //font-family: 'Lato', 'sans-serif';
   font-size: 20px;
   background-size: cover !important;
   //background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1) ), url('navbar_image_2.jpg');
@@ -81,7 +81,7 @@
   color: rgba(255,255,255,1);
   //color: #616668;
   font-size: 17px;
-  font-family: 'Maven Pro', 'sans-serif';
+  //font-family: 'Maven Pro', 'sans-serif';
 
   &:visited{
   color: rgba(255,255,255,1);
