--- a/app/assets/stylesheets/pages/destination_select.scss
+++ b/app/assets/stylesheets/pages/destination_select.scss
@@ -4,31 +4,23 @@
   flex-direction: row;
   top: 70px;
   .display-lists {
-    padding: 2vh 1vw;
+    padding: 0vh 1vw 2vh 1vw;
     text-align: center;
     width: 75vw;
-    h2 {
-      font-family: 'Maven Pro', 'sans-serif' !important;
-    }
   }
 }
 
 .sidebar {
   width: 25vw;
   min-height: 100vh;
-  //background-color: rgba(210, 210, 210, 0.54);
   background-color: white;
   color: #282828;
-  //box-shadow: (0 0 3px #ff2a6b);
   box-shadow: 0 0 2px rgba(118, 118, 118, 0.78);
   display: flex;
   flex-direction: column;
-  //margin-top: 5px;
   h3 {
-    font-family: 'Maven Pro', 'sans-serif' !important;
-    //border-bottom: solid 1px black;
+    //font-family: 'Maven Pro', 'sans-serif' !important;
     box-shadow: 0 0 2px -2px rgba(118, 118, 118, 0.78);
-    //text-transform: uppercase;
     color: #333;
     text-align: center;
     font-size: x-large;
@@ -41,12 +33,13 @@
     padding-bottom: 5px;
   }
   a {
-    font-weight: normal;
+    font-weight: lighter;
   }
   .card {
     height: 10vw;
     width: 20vw;
     border: solid 1px rgba(255,255,255,0.5);
+    margin: 15px auto;
   }
   .status-section {
     margin-top: 5px;
