--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -34,6 +34,9 @@
 
   <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1494552671665-4b5d938da5aa?auto=format&fit=crop&w=1502&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
     <h3>Languages for Travel</h3>
+<!--     <p><%= @country.travel_languages %></p>
+
+ -->
     <p><%= @country.travel_languages %></p>
   </div>
 
