--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,12 @@
     <title>GlobeGetter</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+       <meta property="og:title" content="GlobeGetter | The world has 195 countries. How many do you want to visit?">
+      <meta property="og:type" content="article">
+      <meta property="og:url" content="www.globe-getter.com">
+      <meta property="og:image" content="og_image.png">
+      <meta property="og:description" content="GlobeGetter is an application for life-long travellers who want to set travel goals based on countries they want to visit.">
+      <meta property="og:site_name" content="GlobeGetter">
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
