--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>GlobeGetter</title>
+    <title>GlobeGetter | The world has 195 countries. How many do you want to visit?</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
        <meta property="og:title" content="GlobeGetter | The world has 195 countries. How many do you want to visit?">
