--- a/app/views/destinations/update.js.erb
+++ b/app/views/destinations/update.js.erb
@@ -1,4 +1,5 @@
 let divToUpdate = null;
+let notes = null;
 <% if @from_card == 3 %>
   divToUpdate = $("#visitSoon");
 <% elsif @from_card == 2 %>
@@ -6,14 +7,18 @@ let divToUpdate = null;
 <% elsif @from_card == 1 %>
   divToUpdate = $("#visited");
 <% else %>
-//   console.log("four is happening.");
-//   const inTheMap = getElementById("destinations")";
-//   inTheMap.insertAdjacentHTML("afterbegin", "<p><%= @notes %></p>");
-// 'destinations/card', collection: destinations.where(id: @destination.id);
+  console.log("1");
+  notes = $("#notes");
 <% end %>
+console.log("2")
 
+if (notes !== null) {
+  console.log("3")
+  notes.append("<%= j @destination.notes%>");
+  $('#notesPermanent').hide();
+}
 if(divToUpdate !== null) {
   $('#destination_<%= @destination.id %>').remove();
-  divToUpdate.append("<%= j render partial: 'card', object: Destination.find(@destination.id) %>");
+  divToUpdate.append("<%= j render(partial: 'card', object: Destination.find(@destination.id)) %>");
   divToUpdate.children(".card").show();
 }
