--- a/app/views/destinations/create.js.erb
+++ b/app/views/destinations/create.js.erb
@@ -9,7 +9,7 @@ let divToUpdate = null;
 <% end %>
 
 if(divToUpdate !== null) {
-  $('#country_<%= @destination.country.id %>').hide();
+  $('#country_<%= @destination.country.id %>').remove();
   divToUpdate.append("<%= j render partial: 'card', object: Destination.find(@destination.id) %>");
   divToUpdate.children(".card").show();
 }
