lil javascript fixes

--- a/app/views/destinations/destroy.js.erb
+++ b/app/views/destinations/destroy.js.erb
@@ -1,4 +1,4 @@
 let toGo = $('#destination_<%= @destination.id %>');
-console.log(toGo)
-toGo.remove();
+console.log(toGo);
 $('#country_<%= @destination.country.id %>').show();
+toGo.remove();
