--- a/app/views/pages/destination_select.html.erb
+++ b/app/views/pages/destination_select.html.erb
@@ -12,3 +12,13 @@
     </div>
   </div>
 </div>
+
+<%= content_for(:after_js) do %>
+  <%= javascript_tag do %>
+    $(document).ready( function() {
+      <% @destinations.each do |destination| %>
+        $('#country_<%= destination.country.id %>').hide();
+      <% end %>
+    });
+  <% end %>
+<% end %>
