--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,20 +33,24 @@
     </div>
   </div>
 
- <div class="dashboard-container">
-  <div class="chart-card chart-card-small">
-    <h3>Continents You Want To Visit</h3>
-    <div class="chart">
-      <%= render partial: 'shared/pie_chart', locals: {size: 50, id: "continentPieChart", data_set: @user.continent_data} %>
+  <% if !@destinations.where(status: 2).empty? || !@destinations.where(status: 3).empty? %>
+    <div class="dashboard-container">
+      <div class="chart-card chart-card-small">
+        <h3>Continents You Want To Visit</h3>
+      <div class="chart">
+        <%= render partial: 'shared/pie_chart', locals: {size: 50, id: "continentPieChart", data_set: @user.continent_data} %>
+      </div>
     </div>
-  </div>
+  <% end %>
 
-  <div class="chart-card chart-card-small">
-    <h3>Languages of your Destinations</h3>
-    <div class="chart">
-      <%= render partial: 'shared/pie_chart', locals: {size: 50, id: "languagePieChart", data_set: @user.language_data} %>
+  <% if !@destinations.where(status: 2).empty? || !@destinations.where(status: 3).empty? %>
+    <div class="chart-card chart-card-small">
+      <h3>Languages of your Destinations</h3>
+      <div class="chart">
+        <%= render partial: 'shared/pie_chart', locals: {size: 50, id: "languagePieChart", data_set: @user.language_data} %>
+      </div>
     </div>
-  </div>
+  <% end %>
 </div>
 
   <% if !@destinations.where(status: 3).empty? %>
