working on map styling

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,3 +1,13 @@
+.review-form {
+  .control-label {
+    color: black;
+    text-align: center;
+  }
+  .btn, .btn-warning {
+    text-align: center;
+  }
+}
+
 .goal-set {
   font-size: 30px;
   font-weight: 400;
