--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,3 +1,4 @@
+  <div class="review-form">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
 
@@ -7,6 +8,7 @@
       <%= f.submit "Post review", class: "btn btn-primary"%>
     <% end %>
 
-    <%= link_to "Cancel", country_path(@country), :class => "btn btn-danger" %>
+    <%= link_to "Back", country_path(@country), :class => "btn btn-warning " %>
     </div>
   </div>
+</div>
