--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,8 +13,8 @@
           <%= f.input :first_name, required: true, autofocus: true %>
           <%= f.input :last_name, required: true, autofocus: true %>
           <%= f.input :email, required: true, autofocus: true %>
+           <%= f.input :airport_code, required: true, collection: ["Los Angeles", "New York", "Amsterdam", "Los Angeles", "Rio De Janeiro", "Sydney", "Tokyo", "Cairo", "Frankfurt", "Moscow", "Atlanta", "Toronto", "London", "New Dheli", "Dubai", "Shanghai", "Hong Kong"] %>
           <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-          <%= f.input :airport_code, required: true, collection: ["Los Angeles", "New York", "Amsterdam", "Los Angeles", "Rio De Janeiro", "Sydney", "Tokoyo", "Cairo", "Frankfurt", "Moscow", "Atlanta", "Toronto", "London", "New Dheli", "Dubai", "Shanghai", "Hong Kong"] %>
           <%= f.input :password_confirmation, required: true %>
           <%= f.button :submit, "Sign up" %>
     <% end %>
