--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -1,6 +1,11 @@
 <div class="map-page">
   <div id="map" style="width: 100%; height: 600px;"></div>
-
+  <div class="map-container">
+    <h3 class="text-center">Legend</h3>
+    <p class="map-item">Countries I've Been To</p>
+    <p class="map-item">Countries I Want to Visit</p>
+    <p class="map-item">Top Priority</p>
+  </div>
   <% content_for(:after_js) do %>
     <script>
       markers_json = <%=raw @hash.to_json %>;
