--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,3 +1,21 @@
 .map-page {
-  margin: 2vh;
+  margin: 2vh 2vh 0vh 2vh;
+}
+
+.map-container {
+  display: flex;
+  padding-bottom: 1vh;
+  padding-top: 1vh;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;
+  box-shadow: 0 1.5px 1px 0 rgba(37, 37, 37, 0.45);
+}
+
+.map-item {
+  min-width: 30vh;
+  min-height: 10vh;
+  text-align: center;
+  padding: 1vh 1vw;
 }
