--- a/app/views/destinations/create.js.erb
+++ b/app/views/destinations/create.js.erb
@@ -7,10 +7,10 @@ let divToUpdate = null;
 <% elsif @destination.status == 1 %>
   divToUpdate = $("#visited");
 <% end %>
-
+debugger;
 if(divToUpdate !== null) {
   $('#country_<%= @destination.country.id %>').hide();
-  divToUpdate.append("<%= j render partial: 'card', object: Destination.find(@destination.id) %>");
+  divToUpdate.after("<%= j render partial: 'card', object: Destination.find(@destination.id) %>");
   divToUpdate.children(".card").show();
 }
 
