--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,6 +15,7 @@
       <p>First Name<%= f.input :first_name, label: false %></p>
       <p>Last Name<%= f.input :last_name, label: false %></p>
       <p>Email<%= f.input :email, label: false %></p>
+      <p>Home City<%= f.input :airport_code, required: true, collection: ["Los Angeles", "New York", "Amsterdam", "Los Angeles", "Rio De Janeiro", "Sydney", "Tokyo", "Cairo", "Frankfurt", "Moscow", "Atlanta", "Toronto", "London", "New Dheli", "Dubai", "Shanghai", "Hong Kong"], label: false %></p>
     </div>
     <div class="text-center">
       <%= f.button :submit, "Submit changes", class: "globegetter-button-pink"%>
