--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -8,8 +8,7 @@
 .map-container {
   display: flex;
   padding: 1vh 1vw 0vh 1vw;
-  margin-bottom: 1vh;
-  margin-top: 1vh;
+  margin: 1vh auto;
   flex-direction: column;
   //flex-wrap: wrap;
   justify-content: center;
