--- a/app/assets/stylesheets/components/_flexbox_elements.scss
+++ b/app/assets/stylesheets/components/_flexbox_elements.scss
@@ -114,8 +114,16 @@
   margin-top: 5vh;
   margin-bottom: 5vh;
   max-width: 90vh;
-  p {
-
+  .goal-set input[type="number"] {
+    font-size: 30px;
+    background-color: transparent;
+    border: solid 1px rgba(0,0,0,0.2);
+    //box-shadow: 1px 1px 1px 1px rgba(37, 37, 37, 0.45);
+    display: inline;
+    max-width: 100px;
+    text-align: center;
+    color: #ff2a6b;
+    font-weight: 400;
   }
 }
 
