--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
        <meta property="og:title" content="GlobeGetter | The world has 195 countries. How many do you want to visit?">
       <meta property="og:type" content="article">
-      <meta property="og:url" content="www.globe-getter.com">
-      <meta property="og:image" content="/assets/og_image.png">
+      <meta property="og:url" content="http://www.globe-getter.com">
+      <meta property="og:image" content="http://res.cloudinary.com/ddsp5wihh/image/upload/v1511464619/koddzhif9x5hs7chcyrt.png">
       <meta property="og:description" content="GlobeGetter is an application for life-long travellers who want to set travel goals based on countries they want to visit.">
       <meta property="og:site_name" content="GlobeGetter">
     <%= csrf_meta_tags %>
