--- a/app/views/countries/_display_lists.html.erb
+++ b/app/views/countries/_display_lists.html.erb
@@ -2,12 +2,15 @@
 <!-- Loop over each continent from an array of continents -->
 <% Country::CONTINENTS.each_with_index do |continent| %>
   <!-- Print continent name -->
-  <h2 id="<%=continent%>"><%= continent %></h2>
-  <!-- For each continent, split countries into groups of 30 -->
-  <% countries.where(continent: continent).find_in_batches(batch_size: 30) do |thirty_countries| %>
-      <div class="scrolling-wrapper">
-        <%= render partial: 'countries/card', collection: thirty_countries %>
-      </div>
+  <% continent_divider = countries.where(continent: continent) %>
+  <% unless continent_divider.empty? %>
+    <h2 id="<%=continent%>"><%= continent %></h2>
+    <!-- For each continent, split countries into groups of 30 -->
+    <% countries.where(continent: continent).find_in_batches(batch_size: 30) do |thirty_countries| %>
+        <div class="scrolling-wrapper">
+          <%= render partial: 'countries/card', collection: thirty_countries %>
+        </div>
+    <% end %>
   <% end %>
 <% end %>
 </div>
