created banner for country

--- a/app/assets/stylesheets/components/_flexbox_elements.scss
+++ b/app/assets/stylesheets/components/_flexbox_elements.scss
@@ -128,7 +128,7 @@
 }
 
 .country-map {
-  margin: 5vh;
+  //margin: 5vh;
 }
 
 .user-destinations-card {
@@ -151,9 +151,9 @@
   }
   &:last-child {
     margin-bottom: 3vh;
-    border-width: 2px 0px 2px 0px;
-    border-color: ($pink);
-    border-style: solid;
+    // border-width: 2px 0px 2px 0px;
+    // border-color: ($pink);
+    // border-style: solid;
   }
 }
 
