--- a/app/views/destinations/update.js.erb
+++ b/app/views/destinations/update.js.erb
@@ -14,9 +14,7 @@ console.log("2")
 
 
 if (notes !== null) {
-  console.log("3")
-  notes.append("<%= j @destination.notes%>");
-  $('#notesPermanent').hide();
+  console.log("Yay a note")
 }
 if(divToUpdate !== null) {
   $('#destination_<%= @destination.id %>').remove();
