--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -6,7 +6,7 @@
       <i class="fa fa-star" aria-hidden="true"></i>
     <% end %>
   <% end %>
-  <a href="<%=@url%>"><%= @slip.first %></a>
+  <a href="<%=@url%>" target="_blank"><%= @slip.first %></a>
 
 <div class="image-box" style="text-align: center;"></div>
   <div class="country-image" style="background-image: url('<%= @country.photo.url %>'); height: 80vh; width: 90vw; background-repeat: no-repeat; margin-top: 1vh;">
@@ -84,7 +84,6 @@
   <%else%>
       <div id="notesAbsent" class="user-destinations-card">
         <p id="notes"></p>
-        <p id="notesPermanent"><%=@destination.first.notes%></p>
         <p>Feel free to add a note for  <%= @country.name %>.</p>
         <%= simple_form_for([@country, @destination.first], h: 4, method: :patch, remote: true) do |f| %>
           <%= f.input :notes, label: false %>
