--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -58,14 +58,24 @@
   opacity: 0.1;
 }
 
-.card .icons a:hover {
-  text-decoration: none;
-  color: lighten($pink, 5%);
+.card .icons a {
+  margin: 0 0.25vw;
+  &:hover {
+    text-decoration: none;
+    color: lighten($pink, 5%);
+  }
 }
 
 .card .icons {
   display: flex;
   flex-direction: row;
   width: 20%;
-  justify-content: space-between;
+}
+
+.card:only-child {
+    margin: 0 auto;
+}
+
+.page-users-show .scrolling-wrapper {
+    justify-content: center;
 }
