--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -36,7 +36,7 @@
   h1 {
     margin-top: 0px;
     color: white;
-    font-size: xx-large;
+    font-size: xxx-large;
     padding: 3vh 0vh 0vh 3vh;
     float: left;
  }
@@ -47,5 +47,16 @@
     padding: 1vh 0vh 0vh 3vh;
     float: left;
     font-weight: 200;
+  }
+  .stars-box {
+    padding: 0vh 0vh 3vh 3vh;
+  }
+  .stars {
+    margin-top: 0px;
+    color: white;
+    font-size: large;
+    float: left;
+    font-weight: 200;
+    padding-right: 11px;
   }
 }
