--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,19 +1,20 @@
 <div class="text-center user_profile">
 <!-- <div class="image-box" style="text-align: center;"></div>
  -->
- <div class="country-image" style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) ), url('<%= @country.photo.url %>'); height: 80vh; width: 100vw; background-repeat: no-repeat; margin: 0vh auto; background-size: cover;">
+ <div class="country-image" style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('<%= @country.photo.url %>'); height: 80vh; width: 100vw; background-repeat: no-repeat; margin: 0vh auto; background-size: 100% auto; background-position: center;">
 <!--     <%= link_to "#{@country.photographer_first_name} #{@country.photographer_last_name} / Unsplash", @country.unsplash_url_utm %>
  -->
   <div><h1><%= @country.name %></h1></div>
-  <div>
+  <div class="stars-box">
     <% if @country.average_rating > 0 %>
       <% @country.average_rating.round.times do %>
-        <i class="fa fa-star" aria-hidden="true"></i>
+        <i class="fa fa-star stars" aria-hidden="true"></i>
       <% end %>
     <% end %>
-    <a href="<%=@url%>" target="_blank">Fly today for: <%= @slip.first %></a>
   </div>
+  <div><a href="<%=@url%>" target="_blank">Fly today for: <%= @slip.first %></a></div>
 </div>
+
 
 <div class="dashboard-container">
   <% if @country.average_rating > 0 %>
@@ -82,6 +83,7 @@
   <% if @destination.empty? %>
     <% %>
   <%else%>
+     <h2>My Notes</h2>
       <div id="notesAbsent" class="user-destinations-card">
         <p id="notes"></p>
         <p id="notesPermanent"><%=@destination.first.notes%></p>
@@ -89,11 +91,14 @@
         <%= simple_form_for([@country, @destination.first], h: 4, method: :patch, remote: true) do |f| %>
           <%= f.input :notes, label: false %>
           <%= f.input :status, as: :hidden %>
-          <%= f.submit class: "btn btn-warning" %>
+          <%= f.submit class: "btn btn-warning", value: "Update Note" %>
         <% end %>
       </div>
   <% end %>
 
+  <div style="height: 3vh;"></div>
+
+  <h2>Reviews for <%= @country.name %></h2>
   <% if @country.reviews.empty? %>
     <div class="user-destinations-card">
       <p>No reviews yet for this country. Be the first to leave a review.</p>
@@ -108,8 +113,7 @@
           <i class="fa fa-star" aria-hidden="true"></i>
         <% end %>
           <% if current_user.reviews.include? review %>
-            <p><%= link_to "Edit", edit_country_review_path(@country, review) %></p>
-            <p><%= link_to "Delete", country_review_path(@country, review), method: :delete, data: { confirm: "Are you sure?"} %></p>
+            <p><%= link_to "Edit", edit_country_review_path(@country, review) %> <%= link_to "Delete", country_review_path(@country, review), method: :delete, data: { confirm: "Are you sure?"} %></p>
             <p><%= link_to "Add Review", new_country_review_path(@country), :class => "btn btn-warning" %></p>
           <% end %>
       <% end %>
