--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,8 +13,8 @@
           <%= f.input :first_name, required: true, autofocus: true %>
           <%= f.input :last_name, required: true, autofocus: true %>
           <%= f.input :email, required: true, autofocus: true %>
-          <%= f.input :airport_code, required: true, label: "Home City", collection: ["Los Angeles", "New York", "Miami", "Newark", "San Francisco", "Houston", "Washington, DC", "Dallas", "Toronto", "Montreal", "Vancouver", "London", "Amsterdam", "Frankfurt", "Moscow", "Rio De Janeiro", "Sydney", "Tokyo", "Cairo", , "Moscow", "Atlanta", "New Dheli", "Dubai", "Shanghai", "Hong Kong", ] %>
-          <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+          <%= f.input :airport_code, required: true, label: "Home City", collection: ["New York", "Miami", "Newark", "San Francisco", "Houston", "Washington, DC", "Los Angeles", "Atlanta", "Dallas", "Toronto", "Vancouver", "Montreal", "Amsterdam", "Paris", "Frankfurt", "Moscow", "London", "Rome", "Vienna", "Helsinki", "Copenhagen", "Zurich", "Sydney", "Tokyo", "Cairo", "New Dheli", "Dubai", "Shanghai", "Hong Kong", "Beijing", "Seoul", "Jeddah", "Sao Paulo", "Bogota", "Rio De Janeiro", "Santiago", "Lima", "Caracas", "Buenos Aires", "Quito", "Medellin", "Panama City"] %>
+        <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
           <%= f.input :password_confirmation, required: true %>
           <%= f.button :submit, "Sign up" %>
     <% end %>
