Made no flight data invisible

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -12,7 +12,9 @@
       <% end %>
     <% end %>
   </div>
-  <div><a href="<%=@url%>" target="_blank">Fly today for: <%= @slip.first %></a></div>
+  <% unless @slip.empty? %>
+    <div><a href="<%=@url%>" target="_blank">Fly today for: <%= @slip.first %></a></div>
+  <% end %>
 </div>
 
 
