--- a/app/views/destinations/_display_lists.html.erb
+++ b/app/views/destinations/_display_lists.html.erb
@@ -1,6 +1,6 @@
 <% Destination::DESTINATION_TYPES.reverse.each do |destination_type| %>
   <div class="status-section" id="<%= destination_type[:title].parameterize.underscore %>">
-    <h3 id="<%= destination_type[:id] %>"><%= destination_type[:title] %></h3>
+    <h3 id="<%= destination_type[:id] %>"> <%= raw destination_type[:icon] %> <%= destination_type[:title] %></h3>
     <%= render partial: 'destinations/card', collection: destinations.where(status: destination_type[:status]) %>
   </div>
 <% end %>
