--- a/app/views/pages/destination_select.html.erb
+++ b/app/views/pages/destination_select.html.erb
@@ -5,8 +5,8 @@
   <div id="mainContent" class="main-content text-center">
     <div id="content">
       <%= form_tag(countries_path, method: :get, remote: true) do %>
-        <%= text_field_tag :query, nil, placeholder: 'Enter country name' %>
-        <%= submit_tag 'Search' %>
+        <%= text_field_tag :query, nil, placeholder: 'Enter country name'%>
+        <%= submit_tag ‘Search %> <i class=“fa fa-search” aria-hidden=“true”></i>'%>
       <% end %>
       <%= render partial: 'countries/display_lists', locals: {countries: @countries} %>
     </div>
