--- a/app/assets/stylesheets/components/_flexbox_elements.scss
+++ b/app/assets/stylesheets/components/_flexbox_elements.scss
@@ -51,19 +51,23 @@
   min-height: 20vh;
   text-align: center;
   //font-family: 'Lato', 'sans-serif';
-  font-weight: 300;
+
   h3 {
     color: white;
     margin: 5px;
-    font-size: x-large;
+    font-size: xx-large;
     font-weight: 400;
   }
   p {
     color: white;
     margin: 5px;
-    font-size: large;
-    font-weight: 200;
+    font-size: x-large;
+    font-weight: 300;
   }
+}
+
+.country-box-text {
+  margin: 5vh auto;
 }
 
 .dashboard-item-note {
