--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,125 +1,145 @@
 <div class="text-center user_profile">
-<!-- <div class="image-box" style="text-align: center;"></div>
- -->
- <div class="country-image" style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('<%= @country.photo.url %>'); height: 80vh; width: 100vw; background-repeat: no-repeat; margin: 0vh auto; background-size: 100% auto; background-position: center;">
-<!--     <%= link_to "#{@country.photographer_first_name} #{@country.photographer_last_name} / Unsplash", @country.unsplash_url_utm %>
- -->
-  <div><h1><%= @country.name %></h1></div>
-  <div class="stars-box">
-    <% if @country.average_rating > 0 %>
-      <% @country.average_rating.round.times do %>
-        <i class="fa fa-star stars" aria-hidden="true"></i>
+
+ <!-- SECTION -->
+  <div class="country-image" style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('<%= @country.photo.url %>'); height: 80vh; width: 100vw; background-repeat: no-repeat; margin: 0vh auto; background-size: 100% auto; background-position: center;">
+    <!--     <%= link_to "#{@country.photographer_first_name} #{@country.photographer_last_name} / Unsplash", @country.unsplash_url_utm %> -->
+    <div><h1><%= @country.name %></h1></div>
+    <div class="stars-box">
+      <% if @country.average_rating > 0 %>
+        <% @country.average_rating.round.times do %>
+          <i class="fa fa-star stars" aria-hidden="true"></i>
+        <% end %>
       <% end %>
+    </div>
+    <div><a href="<%=@url%>" target="_blank">Check flight prices: <%= @slip.first %></a></div>
+  </div>
+
+
+<!-- SECTION -->
+  <div class="dashboard-container">
+  <!--   <% if @country.average_rating > 0 %>
+      <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1503221043305-f7498f8b7888?auto=format&fit=crop&w=1035&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
+        <div class="country-box-text">
+          <h3>Average Rating</h3>
+          <p><%= @country.average_rating %></p>
+        </div>
+      </div>
+    <% end %> -->
+
+    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1487581424120-18f3611a63e6?auto=format&fit=crop&w=1026&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
+      <div class="country-box-text">
+        <h3>Continent</h3>
+        <p><%= @country.continent %></p>
+      </div>
+    </div>
+
+    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1490430657723-4d607c1503fc?auto=format&fit=crop&w=1050&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
+      <div class="country-box-text">
+        <h3>Capital</h3>
+        <p><%= @country.capital %></p>
+      </div>
+    </div>
+
+    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1443110189928-4448af4a2bc5?auto=format&fit=crop&w=897&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
+      <div class="country-box-text">
+        <h3>Currency</h3>
+        <p><%= @country.currency_name %></p>
+      </div>
+    </div>
+
+    <% unless @country.languages.nil? %>
+      <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1494552671665-4b5d938da5aa?auto=format&fit=crop&w=1502&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
+        <div class="country-box-text">
+          <h3>Languages</h3>
+          <p><%= @country.languages_prettified %></p>
+        </div>
+      </div>
     <% end %>
-  </div>
-  <div><a href="<%=@url%>" target="_blank">Fly today for: <%= @slip.first %></a></div>
-</div>
 
+    <% unless @country.population.nil? %>
+      <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1489582558212-475fa5010897?auto=format&fit=crop&w=1051&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
+        <div class="country-box-text">
+          <h3>Population</h3>
+          <p><%= @country.population %></p>
+        </div>
+      </div>
+    <% end %>
 
-<div class="dashboard-container">
-  <% if @country.average_rating > 0 %>
-    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1503221043305-f7498f8b7888?auto=format&fit=crop&w=1035&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
-      <h3>Average Rating</h3>
-      <p><%= @country.average_rating %></p>
-    </div>
-  <% end %>
-
-  <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1487581424120-18f3611a63e6?auto=format&fit=crop&w=1026&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
-    <h3>Continent</h3>
-    <p><%= @country.continent %></p>
-  </div>
-
-  <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1490430657723-4d607c1503fc?auto=format&fit=crop&w=1050&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
-    <h3>Capital</h3>
-    <p><%= @country.capital %></p>
-  </div>
-
-  <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1443110189928-4448af4a2bc5?auto=format&fit=crop&w=897&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
-    <h3>Currency</h3>
-    <p><%= @country.currency_name %></p>
-  </div>
-
-  <% unless @country.languages.nil? %>
-    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1494552671665-4b5d938da5aa?auto=format&fit=crop&w=1502&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
-      <h3>Languages</h3>
-      <p><%= @country.languages_prettified %></p>
-    </div>
-  <% end %>
-
-  <% unless @country.population.nil? %>
-    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1489582558212-475fa5010897?auto=format&fit=crop&w=1051&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
-    <h3>Population</h3>
-      <p><%= @country.population %></p>
-  </div>
-  <% end %>
-
-  <% unless @country.national_dish.nil? %>
+    <% unless @country.national_dish.nil? %>
       <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1478749485505-2a903a729c63?auto=format&fit=crop&w=1050&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
-      <h3>National Dish</h3>
-        <p><%= @country.national_dish %></p>
-    </div>
-  <% end %>
+        <div class="country-box-text">
+          <h3>National Dish</h3>
+          <p><%= @country.national_dish %></p>
+        </div>
+      </div>
+    <% end %>
 
-  <% unless @country.avg_temperature_in_celsius.nil? %>
-    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1459695452562-46cc57bef5f6?auto=format&fit=crop&w=1050&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
-    <h3>Average Yearly Temperature</h3>
-      <p><%= @country.avg_temperature_in_celsius %> C </p>
-  </div>
-  <% end %>
+    <% unless @country.avg_temperature_in_celsius.nil? %>
+      <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1459695452562-46cc57bef5f6?auto=format&fit=crop&w=1050&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
+        <div class="country-box-text">
+          <h3>Average Yearly Temperature</h3>
+          <p><%= @country.avg_temperature_in_celsius %> C </p>
+        </div>
+      </div>
+    <% end %>
 
-  <% unless @country.landlocked.nil? %>
-    <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1503221043305-f7498f8b7888?auto=format&fit=crop&w=1035&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
-    <h3>Landlocked?</h3>
-    <% if @country.landlocked == true %>
-      <p>Yes</p>
-    <% else %>
-      <p>No</p>
+    <% unless @country.landlocked.nil? %>
+      <div style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2) ), url('https://images.unsplash.com/photo-1503221043305-f7498f8b7888?auto=format&fit=crop&w=1035&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D'); background-size: cover;" class="dashboard-item-country">
+        <div class="country-box-text">
+          <h3>Landlocked?</h3>
+          <% if @country.landlocked == true %>
+            <p>Yes</p>
+          <% else %>
+            <p>No</p>
+          <% end %>
+        </div>
+      </div>
     <% end %>
   </div>
-  <% end %>
-</div>
 
-<div>
-  <% if @destination.empty? %>
-    <% %>
-  <%else%>
-     <h2>My Notes</h2>
-      <div id="notesAbsent" class="user-destinations-card">
-        <p id="notes"></p>
-        <p>Feel free to add a note for  <%= @country.name %>.</p>
-        <%= simple_form_for([@country, @destination.first], h: 4, method: :patch, remote: true) do |f| %>
-          <%= f.input :notes, label: false %>
-          <%= f.input :status, as: :hidden %>
-          <%= f.submit class: "btn btn-warning", value: "Update Note" %>
+<!-- SECTION -->
+  <div>
+    <% if @destination.empty? %>
+      <% %>
+    <%else%>
+       <h2>My Notes</h2>
+        <div id="notesAbsent" class="user-destinations-card">
+          <p id="notes"></p>
+          <p>Feel free to add a note for  <%= @country.name %>.</p>
+          <%= simple_form_for([@country, @destination.first], h: 4, method: :patch, remote: true) do |f| %>
+            <%= f.input :notes, label: false %>
+            <%= f.input :status, as: :hidden %>
+            <%= f.submit class: "btn btn-warning", value: "Update Note" %>
+          <% end %>
+        </div>
+    <% end %>
+
+    <div style="height: 3vh;"></div>
+
+    <h2>Reviews for <%= @country.name %></h2>
+    <% if @country.reviews.empty? %>
+      <div class="user-destinations-card">
+        <p>No reviews yet for this country. Be the first to leave a review.</p>
+        <p><%= link_to "Add Review", new_country_review_path(@country), :class => "btn btn-warning" %></p>
+      </div>
+    <% else %>
+      <div class="user-destinations-card">
+        <% @country.reviews.each do |review| %>
+          <p class="review"><%= review.content %></p>
+          <p class="rating"></p>
+          <% review.rating.times do %>
+            <i class="fa fa-star" aria-hidden="true"></i>
+          <% end %>
+            <% if current_user.reviews.include? review %>
+              <p><%= link_to "Edit", edit_country_review_path(@country, review) %> <%= link_to "Delete", country_review_path(@country, review), method: :delete, data: { confirm: "Are you sure?"} %></p>
+              <p><%= link_to "Add Review", new_country_review_path(@country), :class => "btn btn-warning" %></p>
+            <% end %>
         <% end %>
       </div>
-  <% end %>
+    <% end %>
+  </div>
 
-  <div style="height: 3vh;"></div>
-
-  <h2>Reviews for <%= @country.name %></h2>
-  <% if @country.reviews.empty? %>
-    <div class="user-destinations-card">
-      <p>No reviews yet for this country. Be the first to leave a review.</p>
-      <p><%= link_to "Add Review", new_country_review_path(@country), :class => "btn btn-warning" %></p>
-    </div>
-  <% else %>
-    <div class="user-destinations-card">
-      <% @country.reviews.each do |review| %>
-        <p class="review"><%= review.content %></p>
-        <p class="rating"></p>
-        <% review.rating.times do %>
-          <i class="fa fa-star" aria-hidden="true"></i>
-        <% end %>
-          <% if current_user.reviews.include? review %>
-            <p><%= link_to "Edit", edit_country_review_path(@country, review) %> <%= link_to "Delete", country_review_path(@country, review), method: :delete, data: { confirm: "Are you sure?"} %></p>
-            <p><%= link_to "Add Review", new_country_review_path(@country), :class => "btn btn-warning" %></p>
-          <% end %>
-      <% end %>
-    </div>
-  <% end %>
-</div>
-
+<!-- SECTION -->
   <div id="map" class="country-map" style="height: 80vh;"></div>
   <% content_for(:after_js) do %>
     <%= javascript_tag do %>
@@ -138,18 +158,3 @@
     <% end %>
   <% end %>
 </div>
-<!--       markers_json = <%=raw @hash.to_json %>;
-      handler = Gmaps.build('Google');
-      handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-       markers = handler.addMarkers(markers_json);
-       handler.bounds.extendWith(markers);
-       for (var i = 0; i < markers.length; i++) {
-          Object.keys(JSON.parse(markers[i].serviceObject.title)).forEach(function(key) {
-            markers[i].serviceObject[key] = JSON.parse(markers[i].serviceObject.title)[key];
-          })
-          google.maps.event.addListener(markers[i].serviceObject, 'click', function(event) {
-            window.open("/countries/" + this.country_id);
-          });
-       }
-       handler.fitMapToBounds();
-      }); -->
