--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,8 +9,8 @@
           I want to visit <%= f.input :number_countries, input_html: {value: params[:countries]}, label: false %> countries over
           <%= f.input :years, input_html: {value: params[:years]}, label: false %> years.
         </div>
-          <%= f.input :photo, class: "text-center" %>
-          <%= f.input :first_name, required: true, autofocus: true %>
+<!--           <%= f.input :photo, class: "text-center" %>
+ -->          <%= f.input :first_name, required: true, autofocus: true %>
           <%= f.input :last_name, required: true, autofocus: true %>
           <%= f.input :email, required: true, autofocus: true %>
           <%= f.input :airport_code, required: true, label: "Home City", collection: ["New York", "Miami", "Newark", "San Francisco", "Houston", "Washington, DC", "Los Angeles", "Atlanta", "Dallas", "Toronto", "Vancouver", "Montreal", "Amsterdam", "Paris", "Frankfurt", "Moscow", "London", "Rome", "Vienna", "Helsinki", "Copenhagen", "Zurich", "Sydney", "Tokyo", "Cairo", "New Dheli", "Dubai", "Shanghai", "Hong Kong", "Beijing", "Seoul", "Jeddah", "Sao Paulo", "Bogota", "Rio De Janeiro", "Santiago", "Lima", "Caracas", "Buenos Aires", "Quito", "Medellin", "Panama City"] %>
