--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,4 @@
-<h1 class="text-center">Post review for <%= @country.name %></h1>
-
-<%= render "form" %>
+<div class="review-form">
+  <h1 class="text-center">Post review for <%= @country.name %></h1>
+  <%= render "form" %>
+</div>
