added magnifying glass

--- a/app/views/pages/destination_select.html.erb
+++ b/app/views/pages/destination_select.html.erb
@@ -5,8 +5,11 @@
   <div id="mainContent" class="main-content text-center">
     <div id="content">
       <%= form_tag(countries_path, method: :get, remote: true) do %>
-        <%= text_field_tag :query, nil, placeholder: 'Enter country name'%>
-        <%= submit_tag ‘Search %> <i class=“fa fa-search” aria-hidden=“true”></i>'%>
+
+        <%= text_field_tag :query, nil, placeholder: "Enter country 🔎" %>
+        <%= submit_tag(value = "Search" ) do %>
+          <i class="fa fa-search"></span>
+        <% end %>
       <% end %>
       <%= render partial: 'countries/display_lists', locals: {countries: @countries} %>
     </div>
@@ -22,3 +25,5 @@
     });
   <% end %>
 <% end %>
+
+
