trying to fix countries page boxes

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "buttons";
 @import "card";
 @import "continent";
+@import 'countries';
 @import "dashboard";
 @import "flexbox_elements";
 @import "footer";
