--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,5 +1,5 @@
 .map-page {
-  margin: 2vh 2vh 0vh 2vh;
+  //margin: 2vh 2vh 0vh 2vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
