--- a/app/views/pages/map.html.erb
+++ b/app/views/pages/map.html.erb
@@ -1,11 +1,14 @@
 <div class="map-page">
-  <div id="map" style="width: 100%; height: 600px;"></div>
-  <div class="map-container">
-    <h3 class="text-center">Legend</h3>
-    <p class="map-item"><%= image_tag 'priority.png' %>Countries I've Been To</p>
-    <p class="map-item"><%= image_tag 'want.png' %>Countries I Want to Visit</p>
-    <p class="map-item"><%= image_tag 'been.png' %>Top Priority</p>
-  </div>
+  <div id="map" style="width: 100%; height: 90vh;"></div>
+<!--   <div id="legend"><h3>Legend</h3></div>
+ -->
+    <div class="map-container">
+      <h3 class="text-center">Legend</h3>
+      <p class="map-item"><%= image_tag 'priority.png' %>Countries I've Been To</p>
+      <p class="map-item"><%= image_tag 'want.png' %>Countries I Want to Visit</p>
+      <p class="map-item"><%= image_tag 'been.png' %>Top Priority</p>
+    </div>
+
   <% content_for(:after_js) do %>
     <%= javascript_tag do %>
       markers_json = <%=raw @hash.to_json %>;
