--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -17,6 +17,9 @@
   border: solid 2px $pink;
   border-radius: 5px;
   max-width: 28vw;
+  position: absolute;
+  bottom: 245px;
+  background-color: rgba(255, 255, 255, .5);
   h3 {
     margin-top: 5px;
     margin-bottom: 10px;
