cards are now clickable

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -34,7 +34,7 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
-  width: 100%;
+  z-index: 3;
   text-align: left;
 }
 .card-description h2 {
