--- a/app/views/destinations/_card.html.erb
+++ b/app/views/destinations/_card.html.erb
@@ -2,6 +2,7 @@
 <!-- <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.2)), url('https://picsum.photos/600/400?image=<%= (1..200).to_a.sample(1)[0] %>');">
  -->
 <div id="destination_<%=card.id%>" class="card" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.2)), url('<%= card.country.photo.url || Country::PLACEHOLDERS.sample %>');">
+    <%= link_to "", country_path(card.country), class: "card-link" %>
    <div class="card-category"></div>
     <div class="card-description">
       <h2><%= link_to card.country.name, country_path(card.country)%></h2>
